# Rust_wallet_generator

./: Cargo.toml  Dockerfile  README.md  sha256sum.txt
src/: bip39.rs  encryption.rs  gui.rs  main.rs  qr.rs  utils.rs  wallet.rs
